# leaguepedia-scoreboard-parser

./: README.md  pyproject.toml  setup.py
leaguepedia_sb_parser/: bayes_parser.py  live_parser.py  parser.py  qq_parser.py
leaguepedia_sb_parser/components/: errors.py  fetch_game.py  get_and_cast_game.py
leaguepedia_scoreboard_parser/: bayes_parser.py  live_parser.py  parser.py  qq_parser.py
leaguepedia_scoreboard_parser/components/: get_and_cast_game.py
tests/: test_config.py
